[package]
name = "sse-never-dies"
version = "0.1.0"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = { git = "https://github.com/jbr/tide", branch = "handle-dropped-sse-encoder" }
async-std = { version = "1.6.1", features = ["attributes"] }
